--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "discord-py>=2.4.0",
     "python-dotenv>=1.0.1",
+    "requests>=2.32.3",
     "sqlalchemy>=2.0.36",
+    "thefuzz>=0.22.1",
 ]
