--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
     "sqlalchemy>=2.0.36",
+    "tabulate>=0.9.0",
     "thefuzz>=0.22.1",
 ]
